# ChangeLog for app-emacs/gnuserv
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emacs/gnuserv/ChangeLog,v 1.13 2007/03/07 09:52:30 opfer Exp $

  07 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  files/50gnuserv-gentoo.el:
  add load path correctly, fixes bug 169588, reported by Ulrich Mueller
  <ulm@kph.uni-mainz.de>

  08 Feb 2007; Christian Faulhammer <opfer@gentoo.org>
  files/digest-gnuserv-3.12.5, files/digest-gnuserv-3.12.7, Manifest:
  recreate Manifest

  08 Feb 2007; Christian Faulhammer <opfer@gentoo.org>
  -gnuserv-3.12.4.ebuild:
  clean up

  24 Oct 2005; Joseph Jezak <josejx@gentoo.org> gnuserv-3.12.7.ebuild:
  Marked ~ppc.

  03 May 2005; Mamoru KOMACHI <usata@gentoo.org> gnuserv-3.12.5.ebuild,
  gnuserv-3.12.7.ebuild:
  Fixed bug #86572.

  03 May 2005; Mamoru KOMACHI <usata@gentoo.org> gnuserv-3.12.4.ebuild,
  gnuserv-3.12.5.ebuild, gnuserv-3.12.7.ebuild:
  Unset LDFLAGS; bug #83112.

*gnuserv-3.12.7 (12 Apr 2005)

  12 Apr 2005; Mamoru KOMACHI <usata@gentoo.org> +gnuserv-3.12.7.ebuild:
  Version bumped.

*gnuserv-3.12.5 (09 Nov 2002)

  09 Nov 2002; Matthew Kennedy <mkennedy@gentoo.org> ChangeLog,
  gnuserv-3.12.5.ebuild, files/digest-gnuserv-3.12.5 :

  New version. Resolves bug #10282.

*gnuserv-3.12.4 (31 Oct 2002)

  02 Nov 2003; Jason Shoemaker <kutsuya@gentoo.org> gnuserv-3.12.4 : The 
  tarball was moved to an archive for older versions. Fixed location.

  31 Oct 2002; Matthew Kennedy <mkennedy@gentoo.org> ChangeLog,
  gnuserv-3.12.4.ebuild, files/50gnuserv-gentoo.el, 
  files/digest-gnuserv-3.12.4 :

  Initial import.