@@ -11,14 +11,14 @@ EBUILD gnuserv-3.12.5.ebuild 881 RMD160 f882346f5286321e7bf68de1cf0e47f1e43aeb7c
 MD5 c20c254dae7aacd1e8f39ad05427813f gnuserv-3.12.5.ebuild 881
 RMD160 f882346f5286321e7bf68de1cf0e47f1e43aeb7c gnuserv-3.12.5.ebuild 881
 SHA256 e627ef391cbec84e77f075a26baad0fcf75b1b706fa5695d1396d7ced323f4dd gnuserv-3.12.5.ebuild 881
-EBUILD gnuserv-3.12.7.ebuild 889 RMD160 77c996315f3106fd244d2ff204ad54ae5ca956f3 SHA1 35ddb0383ff6d47885cfde7294a90428b348ee32 SHA256 abe54327ac71e8ffde09ae71a62151ddeea1f583070785a66182de70246dec30
-MD5 0dad9c2788b0f10213f801611039d376 gnuserv-3.12.7.ebuild 889
-RMD160 77c996315f3106fd244d2ff204ad54ae5ca956f3 gnuserv-3.12.7.ebuild 889
-SHA256 abe54327ac71e8ffde09ae71a62151ddeea1f583070785a66182de70246dec30 gnuserv-3.12.7.ebuild 889
-MISC ChangeLog 1638 RMD160 d12017818542ad4d0162eaf7e953043bab21ca9b SHA1 c42278aa43136524ce7ecba697a00400b47cf6bc SHA256 c0ba03bd2b91b98d00d480d478bde0d5edacba8eb736e6aa9cfea3415931b119
-MD5 1f1885f66e4a8a6e9b3f0deb18441907 ChangeLog 1638
-RMD160 d12017818542ad4d0162eaf7e953043bab21ca9b ChangeLog 1638
-SHA256 c0ba03bd2b91b98d00d480d478bde0d5edacba8eb736e6aa9cfea3415931b119 ChangeLog 1638
+EBUILD gnuserv-3.12.7.ebuild 959 RMD160 874925d90c4652614e662c999d9c3588fc73917d SHA1 0c0b50179def5a914b91a26c51a4b8272807aeb8 SHA256 2b34a797bc91b182a786e7a6d1f83dea69fba91fd17ffd08888325c30a703b87
+MD5 54bec9bb8d0c3a1d3b7c08472d1305f6 gnuserv-3.12.7.ebuild 959
+RMD160 874925d90c4652614e662c999d9c3588fc73917d gnuserv-3.12.7.ebuild 959
+SHA256 2b34a797bc91b182a786e7a6d1f83dea69fba91fd17ffd08888325c30a703b87 gnuserv-3.12.7.ebuild 959
+MISC ChangeLog 1783 RMD160 26b396dfd7e8357d7e91b012516d3bf240ffa8d1 SHA1 b66ae3d192c6cc91ba56a6a185dca74e16476d42 SHA256 63a87a0670023cff6afd47b16ad7f14e242cc21af034d1a89c1dcae8a8480066
+MD5 a5f1c8d587c44d0f1a1fe7f1b814a58b ChangeLog 1783
+RMD160 26b396dfd7e8357d7e91b012516d3bf240ffa8d1 ChangeLog 1783
+SHA256 63a87a0670023cff6afd47b16ad7f14e242cc21af034d1a89c1dcae8a8480066 ChangeLog 1783
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
 MD5 fcd33d07e4ee719b01157946734f4fe8 metadata.xml 158
 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 metadata.xml 158
@@ -30,9 +30,9 @@ MD5 d6e65c8b223b46707e821edb38d1370f files/digest-gnuserv-3.12.7 241
 RMD160 ad42b0e7a8b50412b8d9a2645d5299ed8f3a70e6 files/digest-gnuserv-3.12.7 241
 SHA256 f41589f266b3b90090c3ae83d89f9932776c7eed1617e2fbeec11dc9d15081f3 files/digest-gnuserv-3.12.7 241
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.6 (GNU/Linux)
+Version: GnuPG v1.4.7 (GNU/Linux)
 
-iD8DBQFF7osjNQqtfCuFneMRAm+0AKCDq0msA0StWwftw2fm72E3NaIrwACghZ/L
-INjEkGu/ZkTMx9s+0vkPva0=
-=Z8m/
+iD4DBQFGTyACOeoy/oIi7uwRAiZ9AKDWn13SHqvLakd9wTx1tlLcfzrlKwCY4HNG
+78wahVqBMCcDyQEciRCjLQ==
+=a1lJ
 -----END PGP SIGNATURE-----
